<resources>
    <string name="app_name">The FirstMove</string>

    <!--    关于我们部分-->
    <string name="member1">通信1703周梦焓</string>
    <string name="member2">通信1703张召静</string>
    <string name="abtext">通过合租方式，人们可以以相对较低的租金享受品质较高的住房。而且有着相同兴趣爱好或目标的人合租房屋，租屋概念多样，市场预期良好。
        发布租房信息或者寻求租房信息时是否苦于各种房屋中介的性价比对？在这里，没有中间商赚差价，平台只为促成每一对客户完成一次满意的交易。</string>

    <!--    用户协议部分-->
    <string name="agreement">用户协议与隐私政策</string>
    <string name="agreement1" />特别提示
    <string name="agreement11" />
    在此特别提醒您（用户）在注册成为用户之前，请认真阅读本《用户协议》（以下简称“协议”），确保您充分理解本协议中各条款。请您审慎阅读并选择接受或不接受本协议。除非您接受本协议所有条款，否则您无权注册、登录或使用本协议所涉服务。您的注册、登录、使用等行为将视为对本协议的接受，并同意接受本协议各项条款的约束。
    本协议约定安联程通与用户之间关于“安联程通”旗下网站、移动客户端及其他软件服务（以下简称“服务”）的权利义务。“用户”是指注册、登录、使用本服务的个人。本协议可由安联程通随时更新，更新后的协议条款一旦公布即代替原来的协议条款，恕不再另行通知，用户可在本网站查阅最新版协议条款。在安联程通修改协议条款后，如果用户不接受修改后的条款，请立即停止使用安联程通提供的服务，用户继续使用安联程通提供的服务将被视为接受修改后的协议
    <string name="agreement2" />一、账号注册
    <string name="agreement21" />1.
    用户在使用本服务前需要注册一个“安联程通”账号。“安联程通”账号应当使用邮箱、微信号、手机号码中绑定注册，请用户使用尚未与“安联程通”账号绑定的邮箱、微信号、手机号码，以及未被安联程通根据本协议封禁的邮箱、微信号、手机号码注册“安联程通”账号。安联程通可以根据用户需求或产品需要对账号注册和绑定的方式进行变更，而无须事先通知用户。
    <string name="agreement22" />2.
    在用户注册及使用本服务时，安联程通需要搜集能识别用户身份的个人信息以便安联程通可以在必要时联系用户，或为用户提供更好的使用体验。安联程通搜集的信息包括但不限于用户的姓名、性别、年龄、出生日期、身份证号、地址、公司情况、所属行业、银行信息、公司及个人所有的运输车辆产权登记信息、行驶证信息、道路运输许可证信息、个人说明；安联程通同意对这些信息的使用将受限于第三条用户个人隐私信息保护的约束
    <string name="agreement3" />二、服务内容
    <string name="agreement31" />
    本服务的具体内容由搬家记开发团队根据实际情况提供，包括但不限于授权用户通过其账号进行业务查询、网上交易、纳税服务、即时通讯、关注他人、发布留言。安联程通可以对其提供的服务予以变更，且安联程通提供的服务内容可能随时变更；用户将会收到安联程通关于服务变更的通知。
    <string name="agreement4" />三、用户个人隐私信息保护
    <string name="agreement41" />
    1.用户在注册账号或使用本服务的过程中，可能需要填写或提交一些必要的信息，如法律法规、规章规范性文件（以下称“法律法规”）规定的需要填写的身份信息。如用户提交的信息不完整或不符合法律法规的规定，则用户可能无法使用本服务或在使用本服务的过程中受到限制。
    <string name="agreement42" />
    2.个人隐私信息是指涉及用户个人身份或个人隐私的信息，比如，用户真实姓名、身份证号、手机号码、手机设备识别码、微信号、IP地址、用户聊天记录。非个人隐私信息是指用户对本服务的操作状态以及使用习惯等明确且客观反映在安联程通服务器端的基本记录信息、个人隐私信息范围外的其它普通信息，以及用户同意公开的上述隐私信息。
    <string name="agreement43" />
    3.尊重用户个人隐私信息的私有性是安联程通的一贯制度，安联程通将采取技术措施和其他必要措施，确保用户个人隐私信息安全，防止在本服务中收集的用户个人隐私信息泄露、毁损或丢失。在发生前述情形或者安联程通发现存在发生前述情形的可能时，将及时采取补救措施。
    <string name="agreement44" />4.安联程通未经用户同意不向任何第三方公开、 透露用户个人隐私信息。但以下特定情形除外：
    <string name="agreement441" />1.安联程通根据法律法规规定或有权机关的指示提供用户的个人隐私信息；

    2.由于用户将其用户密码告知他人或与他人共享注册帐户与密码，由此导致的任何个人信息的泄漏，或其他非因安联程通原因导致的个人隐私信息的泄露；

    3.用户自行向第三方公开其个人隐私信息；

    4.用户与安联程通及合作单位之间就用户个人隐私信息的使用公开达成约定，安联程通因此向合作单位公开用户个人隐私信息；

    5.任何由于黑客攻击、电脑病毒侵入及其他不可抗力事件导致用户个人隐私信息的泄露。

    5.用户同意安联程通可在以下事项中使用用户的个人隐私信息：

    1.安联程通向用户及时发送重要通知，如软件更新、本协议条款的变更；

    2.安联程通内部进行审计、数据分析和研究等，以改进安联程通的产品、服务和与用户之间的沟通；

    3.依本协议约定，安联程通管理、审查用户信息及进行处理措施；

    4.适用法律法规规定的其他事项。

    除上述事项外，如未取得用户事先同意，安联程通不会将用户个人隐私信息使用于任何其他用途。

    6.安联程通重视对未成年人个人隐私信息的保护。安联程通将依赖用户提供的个人信息判断用户是否为未成年人。任何18岁以下的未成年人注册账号或使用本服务应事先取得家长或其法定监护人（以下简称'监护人'）的书面同意。除根据法律法规的规定及有权机关的指示披露外，安联程通不会使用或向任何第三方透露未成年人的操作记录及其他个人隐私信息。

    7.为了改善安联程通的技术和服务，向用户提供更好的服务体验，安联程通或可会自行收集使用或向第三方提供用户的非个人隐私信息。

    <!--    登录注册页面-->

    <string name="login">登录</string>
    <string name="forgetPwd">忘记密码</string>
    <string name="startRegist">开始注册</string>
    <string name="resPwd">重置密码</string>
    <string name="InputNumber">请输入注册的手机号</string>
    <string name="InputNewPSW">请输入新密码</string>
    <string name="confirm">确认</string>
    <string name="regist">注册</string>
    <string name="camera">房屋拍照</string>
    <string name="xingbie">性别</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>