<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <TextView
            style="@style/texts"
            android:gravity="center"
            android:text="@string/resPwd"
            android:textColor="#ffff"
            android:textSize="24sp"/>
        <!-- input phone -->
        <EditText
            android:id="@+id/editPhone"
            style="@style/texts"
            android:layout_width="fill_parent"
            android:hint="@string/InputNumber"
            android:lines="1"
            android:singleLine="true"
            android:inputType="number"
            android:maxLength="11"/>
        <!-- input password -->


        <EditText
            android:id="@+id/editPwd"
            style="@style/texts"
            android:layout_width="fill_parent"
            android:hint="@string/InputNewPSW"
            android:lines="1"
            android:singleLine="true"
            android:maxLength="16"/>
        <!-- input password again -->
        <EditText
            android:id="@+id/editResPwd"
            style="@style/texts"
            android:layout_width="fill_parent"
            android:hint="请再次输入新密码"
            android:lines="1"
            android:singleLine="true"
            android:maxLength="16"/>
        <!-- the confirm button -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <EditText
            android:id="@+id/etcode"
            style="@style/texts"
            android:layout_width="fill_parent"
            android:hint="请输入验证码"
            android:lines="1"
            android:singleLine="true"
            android:maxLength="16"/>

            <Button
                android:id="@+id/bt_getCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="getCodeClick"
                android:text="获取验证码" />

        </LinearLayout>

        <!-- input code -->
        <Button
            android:id="@+id/btnConfirm"
            style="@style/texts"
            android:layout_width="fill_parent"
            android:background="@drawable/yellowrow_shape"
            android:onClick="OnMyConfirmClick"
            android:text="@string/confirm"/>




    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>